tests/baselines/reference/unicodeExtendedEscapesInTemplates15_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates15_ES5.ts(2,12): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates15_ES5.ts(2,20): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates15_ES5.ts(2,28): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates15_ES5.ts(2,36): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates15_ES5.ts (4 errors) ====
    
    var x = `\u{abcd}\u{ef12}\u{3456}\u{7890}`;
               
!!! error TS1125: Hexadecimal digit expected.
                       
!!! error TS1125: Hexadecimal digit expected.
                               
!!! error TS1125: Hexadecimal digit expected.
                                       
!!! error TS1125: Hexadecimal digit expected.
    